--- a/Autobio Game/Autobio Game.csproj
+++ b/Autobio Game/Autobio Game.csproj
@@ -629,7 +629,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\CameraControl.cs" />
+    <Compile Include="Assets\ControlerManager.cs" />
+    <Compile Include="Assets\GundamControler.cs" />
+    <Compile Include="Assets\PhoneScript.cs" />
+    <Compile Include="Assets\PushBookControler.cs" />
     <Compile Include="Assets\sphereMovement.cs" />
+    <Compile Include="Assets\TiltedBookControler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Packages\com.unity.collab-proxy\Editor\Resources\Styles\CollabHistoryCommon.uss" />
